tui/tests/snapshots/notebook_tree__note_info_dialog.snap
---
source: tui/tests/notebook_tree.rs
assertion_line: 287
expression: text
snapshot_kind: text
---
 Note actions dialog                                                                                   [?] Show keymap 
[Browser]                                   ▐[Editor]                                                                   
 󰝰 Notes                                    ▐ 1 Welcome to Glues!                                                       
   󱇗 Sample Note                            ▐ 2                                                                         
                                            ▐ 3 Press `?` to see keymaps and shortcuts.                                 
                                            ▐ 4 Press `m` in the note tree to create notes or directories.              
                                            ▐ 5 Press `Enter` on a note to open it and start writing.                   
                                            ▐ 6                                                                         
                                            ▐ 7 GitHub: https://github.com/gluesql/glues                                
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                              ┌────────────────────────Note info─────────────────────────┐                              
                              │                                                          │                              
                              │          Name: Sample Note                               │                              
                              │       Note ID: 00000000-0000-0000-0000-000000000000      │                              
                              │  Directory ID: 00000000-0000-0000-0000-000000000000      │                              
                              │                                                          │                              
                              │    Created at: 1970-01-01T00:00:00.000000Z               │                              
                              │    Updated at: 1970-01-01T00:00:00.000000Z               │                              
                              │                                                          │                              
                              │                    Press Esc to close                    │                              
                              │                                                          │                              
                              └──────────────────────────────────────────────────────────┘                              
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐
